@@ -3,7 +3,7 @@
   "uniques": 1,
   "views": [
     {
-      "timestamp": "2025-11-18T00:00:00Z",
+      "timestamp": "2025-12-12T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
