@@ -1,3 +1,12 @@
+2025-12-13T01:06:24Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20184332722 # 837
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-13
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 68 112 / 69 113
+* notice: next accum: outdated-unq outdated-all / unq all: 69 113 / 70 114
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-11-18] / [2025-12-12]
+
 2025-11-27T01:06:08Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19721931023 # 821
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-27
